# libsonic

./: .gitmodules  .travis.yml  CONTRIBUTING.md  Makefile.in  README.md  configure  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md
src/: Makefile.in  cli_config.c  cli_config.h  client.c  client.h  config.h.in  message.c  message.h  sonic.c  sonic.h  tcp.c  tcp.h  util.c  util.h  ws.c  ws.h
test/: Makefile.in  test.h  test_message.c  test_util.c
utils/: Dockerfile.centos7  Dockerfile.debian  Dockerfile.develop  Dockerfile.static  Dockerfile.ubuntu  README.md
